# projeto-python-for-data-engineer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/gold/finance/: currency_heatmap.parquet  top_gainers.parquet  top_losers.parquet  volatility_exchange_rates.parquet
data/raw/api/exchange_rates/: exchange_rates_2025-08-21.json  exchange_rates_2025-08-25.json  exchange_rates_2025-08-26.json  exchange_rates_2025-08-27.json  exchange_rates_2025-08-28.json  exchange_rates_2025-08-29.json  exchange_rates_2025-08-30.json  exchange_rates_2025-08-31.json  exchange_rates_2025-09-01.json  exchange_rates_2025-09-02.json  exchange_rates_2025-09-03.json  exchange_rates_2025-09-04.json  exchange_rates_2025-09-05.json  exchange_rates_2025-09-06.json  exchange_rates_2025-09-07.json  exchange_rates_2025-09-08.json  exchange_rates_2025-09-09.json  exchange_rates_2025-09-10.json  exchange_rates_2025-09-11.json  exchange_rates_2025-09-13.json  exchange_rates_2025-09-14.json  exchange_rates_2025-09-15.json  exchange_rates_2025-09-16.json  exchange_rates_2025-09-17.json  exchange_rates_2025-09-18.json  exchange_rates_2025-09-19.json  exchange_rates_2025-09-20.json  exchange_rates_2025-09-21.json  exchange_rates_2025-09-22.json  exchange_rates_2025-09-23.json  exchange_rates_2025-09-24.json  exchange_rates_2025-09-25.json  exchange_rates_2025-09-26.json  exchange_rates_2025-09-27.json  exchange_rates_2025-09-28.json  exchange_rates_2025-09-29.json  (+3 more)
src/: app.py  utils.py
src/airflow/dags/: api.py
src/ml/: data_loader.py  gemini_chat.py  ml_model.py
(+120 files in other folders)
