[project]
name = "projeto-python-for-data-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "maturin[patchelf]>=1.9.4",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "ruff>=0.13.0",
    "tenacity>=9.1.2",
]
